
@startuml
package email.entity {
  class MailAccount {
  - String uid
  - String emailAddress
  - boolean isAuthenticated
  }
  class Mail {
    - String id
    - MailContent content
    - MailAccount sender
    - MailAccount receiver
    + Mail()
    + String getContent()
    + MailAccount getSender()
    + MailAccount getRecevier()
  }

  class MailContent {
    - String title
    - String body
  }
}

package email.controller {
  class AppController {

  }
  class MailController {

  }
}


package email.repository {

}

package email.service {
  class MailService {

  }
}

' Relation
Mail o-- MailContent
Mail o-- MailAccount
@enduml